--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,27 @@
 spring:
+  application:
+    name: ms-order-processing
+  jpa:
+    database: MYSQL
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLInnoDBDialect
+  cloud:
+    discovery:
+      enabled: false
+
+auto-spare:
+  scm:
+    datasource:
+      jdbc-url: jdbc:mysql://localhost:3306/autosparescm
+      driver-class-name: com.mysql.cj.jdbc.Driver
+
+server:
+  port: 8001
+  servlet:
+    context-path: /orderprocessingservices
+
+
+
 
