--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
+  data:
+    rest:
+      detection-strategy: annotated
 
 auto-spare:
   scm:
@@ -25,6 +28,9 @@ server:
   servlet:
     context-path: /orderprocessingservices
 
+springdoc:
+  api-docs:
+    enabled: true
 
 
 
